--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,9 @@ header {
 
 section {
     background-color: salmon; 
+    text-align: center;
     color:rgb(179, 0, 0); 
-    float: left;
-    margin: 0px;
+    margin-left: 20px;
     width: 1000px;
 
 }
@@ -91,7 +91,8 @@ ul {
 
     list-style-type: square  ;
 
-    margin-left: 200;
+    margin-left: 200px;
+    margin-top: 200 px;
 
     padding-left: 300px;
 
@@ -107,8 +108,8 @@ ul {
 
 li {
 
-    padding-left: 150;
-
+  
+padding: 10px;
     
 
 }
@@ -146,14 +147,14 @@ h1 {
 
 } 
 
-h6 {
+h4 {
     
     background-color: salmon;
     color:rgb(165, 17, 12); 
-    font-family:  'Sedgwick Ave Display', cursive;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
-    height: 5px;
+    height: 10px;
     margin-left: 70px;
     width: 900px;
 }
@@ -163,10 +164,26 @@ h5 {
     color: rgb(138, 63, 60); 
     font-family:  'Beth Ellen', cursive;
     font-size: 20px;
-    text-align: center;
-    margin-left: 220px;
+    
+    margin-left: 20px;
     width: 600px;
 
+}
+
+h6 {
+    
+    
+    color:rgb(165, 17, 12); 
+    font-family:  Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    position: absolute;
+    text-align: center;
+    height: 5px;
+    margin-top: 210px;
+    margin-left: 160px;
+    text-align: inherit;
+
+    width: 900px;
 } 
 img {
     float: center;
