--- a/css/styles.css
+++ b/css/styles.css
@@ -151,11 +151,11 @@ h4 {
     
     background-color: salmon;
     color:rgb(165, 17, 12); 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Sedgwick Ave Display', cursive;
     font-size: 40px;
     text-align: center;
     height: 10px;
-    margin-left: 70px;
+    margin-left: 170px;
     width: 900px;
 }
 h5 {
@@ -165,7 +165,7 @@ h5 {
     font-family:  'Beth Ellen', cursive;
     font-size: 20px;
     
-    margin-left: 20px;
+    margin-left: 220px;
     width: 600px;
 
 }
@@ -174,19 +174,18 @@ h6 {
     
     
     color:rgb(165, 17, 12); 
-    font-family:  Arial, Helvetica, sans-serif;
+    font-family:  'Sedgwick Ave Display', cursive;
     font-size: 30px;
-    position: absolute;
-    text-align: center;
+    text-align: left;
     height: 5px;
-    margin-top: 210px;
-    margin-left: 160px;
-    text-align: inherit;
+    margin-top: 50px;
+    margin-left: 250px;
+    
 
     width: 900px;
 } 
 img {
     float: center;
-    margin-left: 350px;
+    margin-left: 200px;
 }
 
