--- a/css/sales.css
+++ b/css/sales.css
@@ -31,8 +31,8 @@ footer {
     color:rgb(179, 0, 0);
     font-size: 15px;
     float: left;
-    margin-left: 200px;
-    margin-top: 10px;
+    margin-left: 100px;
+    margin-top: 50px;
     width: 900px;
 
 }
@@ -147,11 +147,11 @@ h1 {
 
 } 
 
-h4 {
+h4  {
     
     background-color: salmon;
     color:rgb(165, 17, 12); 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Saira Stencil One', cursive;
     font-size: 40px;
     text-align: center;
     height: 10px;
@@ -174,7 +174,7 @@ h6 {
     
     
     color:rgb(165, 17, 12); 
-    font-family:  Arial, Helvetica, sans-serif;
+    font-family:  'Saira Stencil One', cursive;
     font-size: 30px;
     position: absolute;
     text-align: center;
@@ -188,4 +188,85 @@ h6 {
 img {
     float: center;
     margin-left: 350px;
+}
+
+div {
+
+    margin-left: 180px;
+}
+
+table {
+    background-color: rgb(230, 173, 167);
+    border-inline-color: salmon;
+    border-block-color: salmon;
+    border-bottom-color: #4CAF50;
+    border-style: groove;
+    border-color: salmon;
+    border-radius: 50px;
+    border-color: salmon;
+    margin-left: 180px;
+    width: 900px;
+    padding: 10px;
+    
+
+
+}
+
+tr {
+    
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 20px;
+    padding: 10px;
+    margin-left: 10px;
+    text-align: center;
+
+
+
+}
+tr a {
+
+    display: block;
+
+    color: rgb(240, 55, 9);
+
+    padding: 16px 16px;
+
+    text-decoration: none;
+
+}
+
+tr a {
+
+    color: red;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+
+  
+
+tr :hover {
+
+    background-color: rgb(123, 100, 223);
+
+}
+
+table a.active {
+
+    background-color: #4CAF50;
+
+    color: salmon;
+
+}
+
+  
+
+table :hover:not(.active) {
+
+    background-color: rgb(158, 6, 6);
+
+    color: salmon;
+
 }
