--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,26 @@
-body {
+* {
+    outline: dotted 1px black;
+  }
 
+body {
+    
     background-color: salmon; 
     float: left;
     margin: 0 auto;
-    width: 1000px;
+    width: 960px;
        
 }
 
 header {
     background-color: salmon; 
     color:rgb(179, 0, 0); 
-    float: left;
     margin-top: 5px;
     text-align : center;
-    width: 1000px;
+    width: 960px;
 
 }
 
-section {
-    background-color: salmon; 
-    font-family: 'Sedgwick Ave Display', cursive;
-    font-size: 40px;
-    text-align: center;
-    color:rgb(179, 0, 0); 
-    margin-left: 50px;
-    width: 1000px;
 
-}
 
 footer {
     background-color: salmon; 
@@ -192,7 +186,67 @@ h6 {
     width: 900px;
 } 
 img {
-    float: center;
-    margin-left: 200px;
+    
+    float:left;
+    position: absolute;
 }
 
+section {
+    
+    outline: dotted 10px black;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: 40px;
+    text-align: center;
+    color:rgb(179, 0, 0); 
+    margin-left: 200px;
+    width: 760px;
+    height : 300px;
+    position: relative;
+}
+
+section span {
+    position: absolute;
+    display: block;
+    width:100%;
+    height:100%;
+    background: salmon;
+    font-family: helvetica;
+    padding:10px;
+    text-align: center;
+    box-sizing: border-box;
+    top:0px;
+    transition: 1s all;
+  }
+  
+  section:hover span {
+    opacity: .1;
+    border-radius: 1000px;
+    -moz-border-image: 400px; 
+    transition: 1s all;
+  }
+
+  div:hover {
+    
+    outline: dotted 10px black;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: 40px;
+    text-align: center;
+    color:rgb(179, 0, 0); 
+    margin-left: 200px;
+    width: 760px;
+    height : 300px;
+    position: relative;
+}
+div span {
+    position: absolute;
+    display: block;
+    width:100%;
+    height:100%;
+    background: salmon;
+    font-family: helvetica;
+    padding:10px;
+    text-align: center;
+    box-sizing: border-box;
+    top:0px;
+    transition: 1s all;
+  }
