--- a/demo.css
+++ b/demo.css
@@ -13,19 +13,16 @@
     display: block;
     width:100%;
     height:100%;
-    blackground: #000;
+    background: #000;
     font-family: helvetica;
     padding:10px;
     text-align: center;
     box-sizing: border-box;
     top:0px;
-    transition 1s all
+    transition : 1sn all
   }
   
-  section:hover span {
+  section a:hover span {
     opocity: .7;
   }
   
-  img {
-    
-  }
