--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-* {
-    outline: dotted 1px black;
-  }
 
 body {
     
@@ -8,6 +5,7 @@ body {
     float: left;
     margin: 0 auto;
     width: 960px;
+    
        
 }
 
@@ -16,7 +14,10 @@ header {
     color:rgb(179, 0, 0); 
     margin-top: 5px;
     text-align : center;
+    height : 600px;
     width: 960px;
+    
+    
 
 }
 
@@ -103,11 +104,9 @@ ul {
   
 
 li {
-
   
 padding: 8px;
     
-
 }
 
   
@@ -129,6 +128,7 @@ li a:hover {
     background-color: rgb(123, 100, 223);
 
 }
+
 
 h1 {
     
@@ -173,27 +173,34 @@ h5 {
 
 h6 {
     
-    
+    border: dotted 10px salmon;
     color:rgb(165, 17, 12); 
     font-family:  'Sedgwick Ave Display', cursive;
     font-size: 40px;
     text-align: left;
-    height: 5px;
-    margin-top: 50px;
+    height: 40px;
+    width: 600px;
+    margin-top: 10px;
     margin-left: 250px;
     
-
-    width: 900px;
 } 
 img {
     
-    float:left;
-    position: absolute;
+    float:center;
+    border-radius: 70px;
+    margin-left: 150px;
+    padding-top: -100px;
+    
+}
+
+#fish {
+    float: center;
+    padding: 40px;
 }
 
 section {
     
-    outline: dotted 10px black;
+    outline: dotted 10px salmon;
     font-family: 'Sedgwick Ave Display', cursive;
     font-size: 40px;
     text-align: center;
@@ -207,10 +214,11 @@ section {
 section span {
     position: absolute;
     display: block;
+    cursor: grabbing;
     width:100%;
     height:100%;
     background: salmon;
-    font-family: helvetica;
+    font-family: 'Beth Ellen', cursive;  
     padding:10px;
     text-align: center;
     box-sizing: border-box;
@@ -219,7 +227,7 @@ section span {
   }
   
   section:hover span {
-    opacity: .1;
+    opacity: .3;
     border-radius: 1000px;
     -moz-border-image: 400px; 
     transition: 1s all;
